<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/basketFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_shopping_basket_24"
        android:title="@string/basket"/>
    <item
        android:id="@+id/stockFragment"
        android:enabled="true"
        android:icon="@drawable/outline_inventory_24"
        android:title="@string/stock"/>
    <item
        android:id="@+id/employeesFragment"
        android:enabled="true"
        android:icon="@drawable/outline_people_24"
        android:title="@string/employees"/>
    <item
        android:id="@+id/notificationsFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_notifications_none_24"
        android:title="@string/notifications"/>
</menu>