<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title_inventame"
        android:textColor="@color/seed"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo"
        />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/slogan"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button_login"
            android:layout_width="300dp"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/seed"
            />

        <Button
            android:id="@+id/button_register"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/seed"
            app:strokeColor="@color/seed" />
    </LinearLayout>


</LinearLayout>