<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.StartupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_inventame"
            android:textColor="@color/seed"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/slogan"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_goToLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/seed"
            android:text="@string/title_login" />

        <Button
            android:id="@+id/btn_goToRegister"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/seed"
            app:strokeColor="@color/seed" />
    </LinearLayout>

</RelativeLayout>
