<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ForgotPasswordFragment"
    android:orientation="vertical">


    <Button
        style="?attr/materialIconButtonStyle"
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:iconSize="30dp"
        app:icon="@drawable/baseline_arrow_back_24"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_weight="1">


        <!-- Titulo del layout: Iniciar sesion -->
        <TextView
            android:id="@+id/title_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recover_password"
            android:textColor="@color/seed"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_recover"
            android:textColor="@color/md_theme_light_onSurface"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_weight="1"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/seed"
            android:textColor="@color/seed"
            android:hint="@string/email_placeholder"

            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/seed"
            android:text="@string/recover" />
    </LinearLayout>
</LinearLayout>

