<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ubpis.inventame.viewmodel.EmployeeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.EmployeeDialogFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_light_background"
            app:elevation="0dp"
            app:liftOnScroll="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="6dp"
                android:paddingEnd="16dp"
                app:contentInsetStartWithNavigation="0dp"
                app:menu="@menu/dialog_menu"
                app:navigationIcon="@drawable/baseline_close_24"
                app:title="@string/employee_add" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_marginTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingBottom="50dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/employee_image_card"
                        style="?attr/materialCardViewFilledStyle"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageView
                            android:id="@+id/employee_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/product_image_textfield"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/employee_name"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="16dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employee_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:text="@={viewModel.selected.name}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/employee_lastname"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employee_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={viewModel.selected.lastname}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Product name textfield -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_placeholder"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employee_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text="@={viewModel.selected.email}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/employee_document"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employee_document"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:clickable="true"
                        android:inputType="text"
                        android:text="@={viewModel.selected.documentNumber}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_placeholder"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    app:endIconMode="password_toggle"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employee_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_password_confirm"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    app:endIconMode="password_toggle"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/employee_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <Button
                    android:visibility="gone"
                    android:id="@+id/delete_button"
                    android:layout_width="300dp"
                    android:layout_alignParentBottom="true"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="@string/employee_delete" />
            </LinearLayout>



        </ScrollView>

    </RelativeLayout>
</layout>