<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            style="?attr/materialIconButtonStyle"
            android:id="@+id/iconButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:icon="@drawable/baseline_arrow_back_24"

            android:onClick="returnBack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Titulo del layout: Recuperar contraseña -->
            <TextView
                android:id="@+id/title_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/recover_password"
                android:textStyle="bold"
                android:textSize="32sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:textColor="@color/seed"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_recover"
                android:layout_marginBottom="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/seed"
                android:textColor="@color/seed"
                android:hint="@string/email_placeholder"

                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/botton_recover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_email"
                android:backgroundTint="@color/seed"

                android:onClick="send"/>
        </LinearLayout>
    </RelativeLayout>





</androidx.constraintlayout.widget.ConstraintLayout>

